--- a/.github/actions/update-package/action.yaml
+++ b/.github/actions/update-package/action.yaml
@@ -52,7 +52,9 @@ runs:
             echo "Branch does not exist"
             git checkout -b automatic_package_update
           fi
-
+          if [ "$ENVIRONMENT_MODE" = "dev" ]; then
+            VERSION="main"
+          fi
           sed -i -r "s|^$PACKAGE_REF=.*$|$PACKAGE_REF=\"$VERSION\"|" environment.$ENVIRONMENT_MODE
 
           git config user.email "${{ github.repository_owner }}@bopen.com"
