--- a/.github/actions/update-chart/action.yaml
+++ b/.github/actions/update-chart/action.yaml
@@ -92,3 +92,14 @@ runs:
               "body": "This PR updates the appVersion to '${{ inputs.app-version }}'."
             }'
         fi
+    - name: Auto-merge PR
+      if: steps.check_pr.outputs.pr_number != ''
+      shell: bash
+      run: |
+        pr_number=${{ steps.check_pr.outputs.pr_number }}
+        echo "Merging PR #$pr_number"
+        curl -X PUT \
+          -H "Authorization: Bearer ${{ inputs.helm-pat }}" \
+          -H "Accept: application/vnd.github+json" \
+          https://api.github.com/repos/${{ inputs.chart-repo }}/pulls/$pr_number/merge \
+          -d '{"commit_title":"Auto-merge update","merge_method":"squash"}'
