--- a/.github/workflows/helm-chart.yaml
+++ b/.github/workflows/helm-chart.yaml
@@ -78,3 +78,38 @@ jobs:
         shell: bash
         run: |
           rm -rf ${{ steps.set_vars.outputs.output-folder }}
+
+      - name: Auto-merge PR and cleanup branch
+        if: github.event_name == 'pull_request'
+        shell: bash
+        env:
+          GITHUB_TOKEN: ${{ secrets.DSS_HELM_PAT }}
+        run: |
+          pr_number=${{ github.event.pull_request.number }}
+          repo=${{ github.repository }}
+          branch_name=${{ github.head_ref }}
+
+          echo "Trying to merge PR #$pr_number on repo $repo"
+
+          merge_response=$(curl -s -X PUT \
+            -H "Authorization: Bearer $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/$repo/pulls/$pr_number/merge \
+            -d '{"commit_title":"Auto-merge update","merge_method":"squash"}')
+
+          echo "Merge response: $merge_response"
+
+          merged=$(echo "$merge_response" | jq -r '.merged')
+
+          if [ "$merged" == "true" ]; then
+            echo "Merge successful. Deleting remote branch: $branch_name"
+            curl -s -X DELETE \
+              -H "Authorization: Bearer $GITHUB_TOKEN" \
+              -H "Accept: application/vnd.github+json" \
+              https://api.github.com/repos/$repo/git/refs/heads/$branch_name
+          else
+            echo "Merge failed or already merged. Skipping branch delete."
+          fi
+
+
+
