--- a/.github/actions/git-version/action.yml
+++ b/.github/actions/git-version/action.yml
@@ -79,7 +79,7 @@ runs:
       shell: bash
       id: set_mode
       run: |
-        if [ "${{ steps.version.outputs.is-stable }}" == "true" ]; then
+        if [[ "${{ steps.version_step.outputs.preReleaseTag }}" == "" ]]; then
           echo "enviromentMode=stable" >> $GITHUB_OUTPUT
         else
           echo "enviromentMode=dev" >> $GITHUB_OUTPUT
