--- a/.github/actions/update-chart/action.yaml
+++ b/.github/actions/update-chart/action.yaml
@@ -8,7 +8,7 @@ inputs:
   app-version:
     description: "New appVersion to set"
     required: true
-  helm-pat:
+  github-pat:
     description: "PAT token to access the repo"
     required: true
 
@@ -19,7 +19,7 @@ runs:
       uses: actions/checkout@v4
       with:
         repository: ${{ inputs.chart-repo }}
-        token: ${{ inputs.helm-pat }}
+        token: ${{ inputs.github-pat }}
         ref: main
 
     - name: Check for existing branch
@@ -63,7 +63,7 @@ runs:
       run: |
         response=$(curl -s -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          -H "Authorization: Bearer ${{ inputs.helm-pat }}" \
+          -H "Authorization: Bearer ${{ inputs.github-pat }}" \
           https://api.github.com/repos/${{ inputs.chart-repo }}/pulls)
 
         pr_number=$(echo "$response" | docker run --rm -i imega/jq '.[] | select(.head.ref=="automatic_update" and .base.ref=="main") | .number')
@@ -73,7 +73,7 @@ runs:
           curl -X POST \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: Bearer ${{ inputs.helm-pat }}" \
+            -H "Authorization: Bearer ${{ inputs.github-pat }}" \
             https://api.github.com/repos/${{ inputs.chart-repo }}/pulls \
             -d '{
               "title": "Update appVersion",
@@ -86,7 +86,7 @@ runs:
           curl -X PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: Bearer ${{ inputs.helm-pat }}" \
+            -H "Authorization: Bearer ${{ inputs.github-pat }}" \
             https://api.github.com/repos/${{ inputs.chart-repo }}/pulls/$pr_number \
             -d '{
               "body": "This PR updates the appVersion to '${{ inputs.app-version }}'."
