--- a/.github/workflows/build-search.yml
+++ b/.github/workflows/build-search.yml
@@ -49,9 +49,18 @@ jobs:
         token: ${{ secrets.CADS_PAT }}
         path: .
 
-    - name: Build and push
-      uses: docker/build-push-action@v3
+    - name: Set up JDK 24
+      uses: actions/setup-java@v4
+      with:
+        java-version: '24'
+        distribution: 'temurin'
+        cache: maven
 
+    - name: Build with Maven
+      run: mvn package
+
+    - name: Build and push
+      uses: docker/build-push-action@v5
       with:
         context: .
         push: true
