--- a/.github/workflows/update-downstream-packages.yaml
+++ b/.github/workflows/update-downstream-packages.yaml
@@ -29,6 +29,6 @@ jobs:
       with:
         package-ref: ${{ inputs.package-ref }}
         enviromentMode: stable
-        github-pat: ${{ secrets.DSS_HELM_PAT }}
+        github-pat: ${{ secrets.DSS_GITHUB_PAT }}
         version: ${{ steps.version.outputs.version }}
         repositories: ${{ inputs.repositories }}
