--- a/.github/actions/update-chart/action.yaml
+++ b/.github/actions/update-chart/action.yaml
@@ -22,18 +22,18 @@ runs:
         token: ${{ inputs.github-pat }}
         ref: main
 
-    - name: Check for existing branch
-      id: check_branch
-      shell: bash
-      run: |
-        git fetch origin
-        if git show-ref --verify --quiet refs/heads/automatic_update; then
-          echo "Branch exists"
-          git checkout automatic_update
-        else
-          echo "Branch does not exist"
-          git checkout -b automatic_update
-        fi
+    # - name: Check for existing branch
+    #   id: check_branch
+    #   shell: bash
+    #   run: |
+    #     git fetch origin
+    #     if git show-ref --verify --quiet refs/heads/automatic_update; then
+    #       echo "Branch exists"
+    #       git checkout automatic_update
+    #     else
+    #       echo "Branch does not exist"
+    #       git checkout -b automatic_update
+    #     fi
 
     - name: Update appVersion
       shell: bash
@@ -49,46 +49,51 @@ runs:
         if git diff-index --quiet HEAD; then
           echo "Nothing to commit, Chart.yaml is up-to-date."
         else
-          git commit -m "Update appVersion to ${{ inputs.app-version }}"
+          git commit -m "🤖 Update appVersion to ${{ inputs.app-version }}"
         fi
 
     - name: Push changes
       shell: bash
       run: |
-        git push origin automatic_update --force
+        git push origin main --force
 
-    - name: Create or update pull request
-      id: check_pr
-      shell: bash
-      run: |
-        response=$(curl -s -H "Accept: application/vnd.github+json" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
-          -H "Authorization: Bearer ${{ inputs.github-pat }}" \
-          https://api.github.com/repos/${{ inputs.chart-repo }}/pulls)
+    # - name: Push changes
+    #   shell: bash
+    #   run: |
+    #     git push origin automatic_update --force
 
-        pr_number=$(echo "$response" | docker run --rm -i imega/jq '.[] | select(.head.ref=="automatic_update" and .base.ref=="main") | .number')
-        echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
-        if [ -z "$pr_number" ]; then
-          echo "No PR exists, creating a new one."
-          curl -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: Bearer ${{ inputs.github-pat }}" \
-            https://api.github.com/repos/${{ inputs.chart-repo }}/pulls \
-            -d '{
-              "title": "Update appVersion",
-              "body": "This PR updates the appVersion to '${{ inputs.app-version }}'.",
-              "head": "automatic_update",
-              "base": "main"
-            }'
-        else
-          echo "PR #$pr_number exists, updating it."
-          curl -X PATCH \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: Bearer ${{ inputs.github-pat }}" \
-            https://api.github.com/repos/${{ inputs.chart-repo }}/pulls/$pr_number \
-            -d '{
-              "body": "This PR updates the appVersion to '${{ inputs.app-version }}'."
-            }'
-        fi
+    # - name: Create or update pull request
+    #   id: check_pr
+    #   shell: bash
+    #   run: |
+    #     response=$(curl -s -H "Accept: application/vnd.github+json" \
+    #       -H "X-GitHub-Api-Version: 2022-11-28" \
+    #       -H "Authorization: Bearer ${{ inputs.github-pat }}" \
+    #       https://api.github.com/repos/${{ inputs.chart-repo }}/pulls)
+
+    #     pr_number=$(echo "$response" | docker run --rm -i imega/jq '.[] | select(.head.ref=="automatic_update" and .base.ref=="main") | .number')
+    #     echo "pr_number=$pr_number" >> $GITHUB_OUTPUT
+    #     if [ -z "$pr_number" ]; then
+    #       echo "No PR exists, creating a new one."
+    #       curl -X POST \
+    #         -H "Accept: application/vnd.github+json" \
+    #         -H "X-GitHub-Api-Version: 2022-11-28" \
+    #         -H "Authorization: Bearer ${{ inputs.github-pat }}" \
+    #         https://api.github.com/repos/${{ inputs.chart-repo }}/pulls \
+    #         -d '{
+    #           "title": "Update appVersion",
+    #           "body": "This PR updates the appVersion to '${{ inputs.app-version }}'.",
+    #           "head": "automatic_update",
+    #           "base": "main"
+    #         }'
+    #     else
+    #       echo "PR #$pr_number exists, updating it."
+    #       curl -X PATCH \
+    #         -H "Accept: application/vnd.github+json" \
+    #         -H "X-GitHub-Api-Version: 2022-11-28" \
+    #         -H "Authorization: Bearer ${{ inputs.github-pat }}" \
+    #         https://api.github.com/repos/${{ inputs.chart-repo }}/pulls/$pr_number \
+    #         -d '{
+    #           "body": "This PR updates the appVersion to '${{ inputs.app-version }}'."
+    #         }'
+    #     fi
